------------
mtPaint NEWS
------------

Here is a summary of the main changes in this release (see handbook for full details):

3.35	2009-?-?

	* Eliminated flicker when positioning line, polygon side, or gradient in Windows version
	* Dock area now holds settings toolbar and layers dialog when their windows are closed
	* Workaround for bug in GTK+ versions 2.14.0 - 2.14.2, 2.16.0, 2.16.1 added (spin buttons had wrong max values)

3.31	2009-4-15

	* Japanese translation updated by Norihiro YONEDA
	* Swedish translation updated by Daniel Nylander and Fredrik Forsmo
	* French translation updated by Plume
	* Builtin file selector uses stock file and directory icons on GTK+2
	* Default settings are loaded from file /etc/mtpaint/mtpaintrc if it exists
	* BUGFIX - Compilation with GTK+ colour selector now works
	* BUGFIX - Escape key now works properly in builtin file selector in GTK+1
	* BUGFIX - Filename length in builtin file selector no longer is limited to 100 characters
	* BUGFIX - Resizing the canvas window now doesn't cause polygon marquee to slide out of place
	* BUGFIX - Polygon marquee shrunk by resizing the canvas is now redrawn properly
	* BUGFIX - Problem with message windows not responding to mouse in some cases is now eliminated

3.30	2009-2-12

	* Chinese (Simplified) translation updated by Cecc
	* Dutch translation added by Hans Strijards
	* Italian translation added by Angelo Gemmi
	* Swedish translation added by Daniel Nylander
	* Spanish translation updated by Miguel Anxo Bouzada, Francisco Jose Rey
	* Galician translation updated by Miguel Anxo Bouzada
	* Czech translation updated by Martin Petricek
	* French translation updated by Johan Serre
	* Portuguese translation updated by Tiago Silva
	* Turkish translation updated by Tutku Dalmaz
	* Russian translation updated
	* New colour picker (old one available as configure option)
	* New file picker (old one available as configure option)
	* Some menu items can have an icon (if set in the preferences)