@@ -36,6 +36,7 @@
 #elif defined GDK_WINDOWING_WIN32
 #define WIN32_LEAN_AND_MEAN
 #include <windows.h>
+#include <gdk/gdkwin32.h>
 #endif
 
 
@@ -2355,6 +2356,41 @@ int release_grab()
 
 // Frame widget with passthrough scrolling
 
+/* !!! Windows builds of GTK+ are made with G_ENABLE_DEBUG, which means also
+ * marshallers checking what passes through. Since "OBJECT" is, from their
+ * point of view, not "POINTER", we need our own marshaller without the checks,
+ * or our "set-scroll-adjustments" handlers won't receive anything but NULLs.
+ * Just in case someone does the same on Unix, we use our marshaller with GTK+2
+ * regardless of the host OS - WJ */
+
+/* #if defined GDK_WINDOWING_WIN32 */
+#if GTK_MAJOR_VERSION == 2
+
+/* Function autogenerated by "glib-genmarshal" utility, then improved a bit - WJ */
+#define g_marshal_value_peek_pointer(v) (v)->data[0].v_pointer
+static void unchecked_gtk_marshal_VOID__POINTER_POINTER(GClosure *closure,
+	GValue *return_value, guint n_param_values, const GValue *param_values,
+	gpointer invocation_hint, gpointer marshal_data)
+{
+	void (*callback)(gpointer data1, gpointer arg1, gpointer arg2, gpointer data2);
+	gpointer data1, data2;
+
+	if (n_param_values != 3) return;
+
+	data1 =	data2 = g_value_peek_pointer(param_values + 0);
+	if (G_CCLOSURE_SWAP_DATA(closure)) data1 = closure->data;
+	else data2 = closure->data;
+	callback = marshal_data ? marshal_data : ((GCClosure *)closure)->callback;
+
+	callback(data1, g_marshal_value_peek_pointer(param_values + 1),
+		g_marshal_value_peek_pointer(param_values + 2), data2);
+}
+
+#undef gtk_marshal_NONE__POINTER_POINTER
+#define gtk_marshal_NONE__POINTER_POINTER unchecked_gtk_marshal_VOID__POINTER_POINTER
+
+#endif
+
 #define WJFRAME(obj)		GTK_CHECK_CAST(obj, wjframe_get_type(), wjframe)
 #define IS_WJFRAME(obj)		GTK_CHECK_TYPE(obj, wjframe_get_type())
 
@@ -2677,6 +2713,7 @@ typedef struct
 	GtkAdjustment	*adjustments[2];
 	GdkGC		*scroll_gc;	// For scrolling in GTK+1
 	int		xy[4];		// Viewport
+	int		size[2];	// Requested (virtual) size
 	int		resize;		// Resize was requested
 	int		resizing;	// Requested resize is happening
 } wjcanvas;
@@ -2782,7 +2819,7 @@ static int wjcanvas_readjust(wjcanvas *canvas, int which)
 
 	oldv = adj->value;
 	wp = which ? widget->allocation.height : widget->allocation.width;
-	sz = which ? widget->requisition.height : widget->requisition.width;
+	sz = canvas->size[which];
 	if (sz < wp) sz = wp;
 	adj->page_size = wp;
 	adj->step_increment = wp * 0.1;
@@ -2921,14 +2958,55 @@ static void wjcanvas_adjustment_value_changed(GtkAdjustment *adjustment, gpointe
 			0, rxy[1] - nxy[1], rxy[0] - nxy[0], rxy[3] - rxy[1]);
 		if (rxy[2] < nxy[2]) wjcanvas_send_expose(widget,
 			rxy[2] - nxy[0], rxy[1] - nxy[1], nxy[2] - rxy[2], rxy[3] - rxy[1]);
+#elif defined GDK_WINDOWING_WIN32
+		/* !!! On Windows, gdk_window_scroll() had been badly broken in
+		 * GTK+ 2.6.5, then fixed in 2.8.10, but with changed behaviour
+		 * with regard to screen updates.
+		 * Unlike all that, my own window scrolling code here behaves
+		 * consistently :-) - WJ */
+		GdkRegion *tmp;
+		int dx = oxy[0] - nxy[0], dy = oxy[1] - nxy[1];
+
+		/* Adjust the pending update region, let system add the rest
+		 * through WM_PAINT (but, in Wine WM_PAINTs can lag behind) */
+		if ((tmp = gdk_window_get_update_area(widget->window)))
+		{
+			gdk_region_offset(tmp, dx, dy);
+			gdk_window_invalidate_region(widget->window, tmp, FALSE);
+			gdk_region_destroy(tmp);
+		}
+
+		/* Tell Windows to scroll window AND send us invalidations */
+		ScrollWindowEx(GDK_WINDOW_HWND(widget->window), dx, dy,
+			NULL, NULL, NULL, NULL, SW_INVALIDATE);
+
+		/* Catch the invalidations; this cures Wine, while on Windows
+		 * just improves render consistency a bit.
+		 * And needs by-region expose to not waste a lot of work - WJ */
+		while (TRUE)
+		{
+			GdkEvent *event = gdk_event_get_graphics_expose(widget->window);
+			if (!event) break;
+			/* !!! The above function is buggy in GTK+2/Win32: it
+			 * doesn't ref the window, so we must do it here - WJ */
+			gdk_window_ref(widget->window);
+			gdk_window_invalidate_region(widget->window,
+				event->expose.region, FALSE);
+			gdk_event_free(event);
+		}
+
+		/* And tell GTK+ to redraw it */
+		gdk_window_process_updates(widget->window, FALSE);
 #else
 		gdk_window_scroll(widget->window,
 			oxy[0] - nxy[0], oxy[1] - nxy[1]);
 #endif
 	}
 
-/* !!! _Maybe_ we need gdk_window_process_updates(widget->window) here
- * !!! in GTK+2 - but then, maybe we don't; only practice will tell */
+/* !!! _Maybe_ we need gdk_window_process_updates(widget->window, FALSE) here
+ * in GTK+2 - but then, maybe we don't; only practice will tell.
+ * Rule of thumb is, you need atrociously slow render to make forced updates
+ * useful - otherwise, they just create a slowdown. - WJ */
 
 }
 
@@ -3051,12 +3129,22 @@ GtkWidget *wjcanvas_new()
 
 void wjcanvas_size(GtkWidget *widget, int width, int height)
 {
-	if (!IS_WJCANVAS(widget) || ((widget->requisition.width == width) &&
-		(widget->requisition.height == height))) return;
+	wjcanvas *canvas;
 
-	WJCANVAS(widget)->resize = TRUE;
+	if (!IS_WJCANVAS(widget)) return;
+	canvas = WJCANVAS(widget);
+	if ((canvas->size[0] == width) && (canvas->size[1] == height)) return;
+	canvas->size[0] = width;
+	canvas->size[1] = height;
+	canvas->resize = TRUE;
+#if GTK_MAJOR_VERSION == 1
+	/* !!! The fields are limited to 16-bit signed, and the values aren't */
+	widget->requisition.width = MIN(width, 32767);
+	widget->requisition.height = MIN(height, 32767);
+#else /* if GTK_MAJOR_VERSION == 2 */
 	widget->requisition.width = width;
 	widget->requisition.height = height;
+#endif
 	gtk_widget_queue_resize(widget);
 }
 
@@ -3064,6 +3152,35 @@ void wjcanvas_get_vport(GtkWidget *widget, int *vport)
 {
 	copy4(vport, WJCANVAS(widget)->xy);
 }
+
+// Repaint expose region
+
+#if GTK_MAJOR_VERSION == 2
+
+// !!! For now, repaint_func() is expected to know widget & window to repaint
+void repaint_expose(GdkEventExpose *event, int *vport, repaint_func repaint, int cost)
+{
+	GdkRectangle *rects;
+	gint nrects;
+	int i, sz, dx = vport[0], dy = vport[1];
+ 
+	gdk_region_get_rectangles(event->region, &rects, &nrects);
+	for (i = sz = 0; i < nrects; i++)
+		sz += rects[i].width * rects[i].height;
+
+	/* Don't bother with regions if not worth it */
+	if (event->area.width * event->area.height - sz > cost * (nrects - 1))
+	{
+		for (i = 0; i < nrects; i++)
+			repaint(rects[i].x + dx, rects[i].y + dy,
+				rects[i].width, rects[i].height);
+	}
+	else repaint(event->area.x + dx, event->area.y + dy,
+		event->area.width, event->area.height);
+	g_free(rects);
+}
+
+#endif
 
 // Maybe this will be needed someday...
 
